* Changelog
** [Unreleased]
*** Added
- Create repository

** [0.0.4] - 2020-03-02
*** Added
- Add basic socket to pop3client Class
- Add basic resolver to pop3client Class
*** Removed
- Removed subprocess attempt
** [0.0.3] - 2020-03-02
*** Added
- Add Time Tracking Badge to README
*** Changed
- Moved asio approach to backup folder
- Made multiple attempts to work with subprocesses, to no proceeds
** [0.0.2] - 2020-02-22
*** Changed
- Rewrote Socket to feature a resolver
- Made basic changes to prepare TLS sockets
** [0.0.1] - 2020-02-11
*** Added
- Include ASIO Library in main.cpp
- Fill .gitignore
- Add simple interfacing with local POP3 server to main.cpp
- Create RESEARCH.md to temporarily document sources
- Create empty doc file